[gd_scene load_steps=2 format=3 uid="uid://dlrfg7mxvhmwr"]

[ext_resource type="Script" path="res://state_machine.gd" id="1_hi26y"]

[node name="StateMachine" type="Node"]
script = ExtResource("1_hi26y")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_right = 599.0
offset_bottom = 300.0

[node name="CircleButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 244.0
offset_top = 34.0
offset_right = 350.0
offset_bottom = 75.0
text = "Circle"
metadata/_edit_use_anchors_ = true

[node name="TriangleButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.02
anchor_right = -0.02
offset_left = 132.0
offset_top = 34.0
offset_right = 238.0
offset_bottom = 75.0
text = "Triangle
"
metadata/_edit_use_anchors_ = true

[node name="SquareButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_right = 0.02
offset_left = 356.0
offset_top = 34.0
offset_right = 462.0
offset_bottom = 75.0
text = "Square
"
metadata/_edit_use_anchors_ = true

[node name="SelectionTypeLabel" type="RichTextLabel" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501667
anchor_top = 0.01
anchor_right = 0.501667
anchor_bottom = 0.01
offset_left = -53.5
offset_right = 53.5
offset_bottom = 29.0
grow_horizontal = 2
bbcode_enabled = true
text = "[u]Select Shape[/u]"
metadata/_edit_use_anchors_ = true

[node name="SizeEnterLabel" type="RichTextLabel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -72.0
offset_right = 52.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[u]Enter Area[/u]"
metadata/_edit_use_anchors_ = true

[node name="SizeInput" type="LineEdit" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0216667
anchor_right = 0.0266667
anchor_bottom = 0.0633333
offset_left = 241.0
offset_top = 109.0
offset_right = 351.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 12
placeholder_text = "0.01-50.00m"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SubmitButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0333333
anchor_top = 0.00333333
anchor_right = 0.0833333
anchor_bottom = 0.06
offset_left = 362.0
offset_top = 108.0
offset_right = 440.0
offset_bottom = 140.0
text = "Submit"
metadata/_edit_use_anchors_ = true

[node name="OutputRect" type="ColorRect" parent="UI"]
layout_mode = 0
offset_left = 117.0
offset_top = 175.0
offset_right = 506.0
offset_bottom = 229.0
color = Color(0.241156, 0.241156, 0.241156, 1)
metadata/_edit_use_anchors_ = true

[node name="OutputRect2" type="ColorRect" parent="UI/OutputRect"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 146.0
offset_bottom = 47.0
color = Color(0.336608, 0.336608, 0.336608, 1)
metadata/_edit_use_anchors_ = true

[node name="OutputRect3" type="ColorRect" parent="UI/OutputRect"]
layout_mode = 0
offset_left = 153.0
offset_top = 6.0
offset_right = 384.0
offset_bottom = 47.0
color = Color(0.337255, 0.337255, 0.337255, 1)
metadata/_edit_use_anchors_ = true

[node name="OutputField" type="LineEdit" parent="UI/OutputRect"]
layout_mode = 0
offset_left = 159.0
offset_top = 11.0
offset_right = 377.0
offset_bottom = 42.0
placeholder_text = "input a size above...."
editable = false
metadata/_edit_use_anchors_ = true

[node name="OutputLabel" type="RichTextLabel" parent="UI/OutputRect"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 146.0
offset_bottom = 43.0
text = "Length of Sides:"
metadata/_edit_use_anchors_ = true

[node name="OutputRect2" type="ColorRect" parent="UI"]
layout_mode = 0
offset_left = 117.0
offset_top = 236.0
offset_right = 506.0
offset_bottom = 290.0
color = Color(0.239216, 0.239216, 0.239216, 1)
metadata/_edit_use_anchors_ = true

[node name="OutputRect2-2" type="ColorRect" parent="UI/OutputRect2"]
layout_mode = 0
offset_left = 153.0
offset_top = 6.0
offset_right = 384.0
offset_bottom = 47.0
color = Color(0.337255, 0.337255, 0.337255, 1)
metadata/_edit_use_anchors_ = true

[node name="OutputRect2-3" type="ColorRect" parent="UI/OutputRect2"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 146.0
offset_bottom = 47.0
color = Color(0.337255, 0.337255, 0.337255, 1)
metadata/_edit_use_anchors_ = true

[node name="Output2-Label" type="RichTextLabel" parent="UI/OutputRect2"]
layout_mode = 0
offset_left = 7.0
offset_top = 14.0
offset_right = 146.0
offset_bottom = 47.0
bbcode_enabled = true
text = "[center]Circumference:[/center]"
metadata/_edit_use_anchors_ = true

[node name="CircumField" type="LineEdit" parent="UI/OutputRect2"]
layout_mode = 0
offset_left = 159.0
offset_top = 11.0
offset_right = 378.0
offset_bottom = 42.0
placeholder_text = "input a size above...."
editable = false
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="UI/CircleButton" to="." method="_on_circle_button_pressed"]
[connection signal="pressed" from="UI/TriangleButton" to="." method="_on_triangle_button_pressed"]
[connection signal="pressed" from="UI/SquareButton" to="." method="_on_square_button_pressed"]
[connection signal="text_changed" from="UI/SizeInput" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="UI/SizeInput" to="." method="_on_size_input_text_submitted"]
